src/stylesheets/layout/_mainCardsDesign.scss
// PARTE DISEÑA //
.body {
    height: 100%;
    
    }

 .wrapper {
     height: calc(100% - 85px);
    }
.containerSectionStyles {
    display: flex;
    flex-direction: column;
    align-items: start;
    width: 100%;
    padding: 20px 30px 30px 20px;
    font-family: $primaryFont;

    @include forTablet {
        width: 40%;
        
    }

    .title {
        padding-left: 10px;
        @include primaryBoldFont;
        color: $metalColor;
    }

    .iconDirection {
        padding-top: 27px;
        display: flex;
        flex-direction: row;
        color: $metalColor;
        font-size: 18px;
    }

    .subContainer {
        padding-top: 27px;
        display: flex;
        flex-direction: row;
        font-family: $primaryFont;
        color: $metalColor;
        font-size: 18px;

        .icon {
            color: $primaryColor;
            font-size: 18px;
            width: 21px;
            height: 18px;
        }
    }

    .line-separator {
        height: 1px;
        width: 100%;
        border-bottom: 1px solid #d8d8d8;

    }

    .button {
        background-color:$primaryColor;
        border-radius: 5px;
        box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.32);
        border: none;
    }

    .containerDesignTop {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        font-family: $primaryFont;
        color: $metalColor;
        font-size: 18px;
        width: 100%;
        cursor: pointer;
        padding-bottom: 10px;
    }

    .color_selected {
        // max-height: 0px;
        transition: max-height 0.5s;
        // overflow: hidden;
        width: 100%;

        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: flex-start;

        .special {
            font-size: 14px;
            font-family: $primaryFont;
            font-weight: 200;

        }

        .textColorsDesign {
            font-family: $primaryFont;
            color: $metalColor;
            font-size: 14px;

        }

        .check {
            margin-right: 10px;
            width: 17px;
            height: 17px;
            cursor: pointer;
        }

        li {
            padding-bottom: 20px;
            display: flex;
            align-items: center;
        }

        .colorPalette {
            display: inline-flex;

            .palette {
                width: 30px;
                height: 25px;
                display: inline-block;
            }

            .containerColorPalette1 {
                background-color: #114e4e;
            }

            .containerColorPalette2 {
                background-color: #438792;
            }

            .containerColorPalette3 {
                background-color: #a2deaf;
            }

           .containerColorPalette4 {
                background-color: #420101;
            }

            .containerColorPalette5 {
                background-color: #bd1010;
            }

            .containerColorPalette6 {
                background-color: #e95626;
            }

           .containerColorPalette7 {
                background-color: #3e5b65;
            }

            .containerColorPalette8 {
                background-color: #eab052;
            }

            .containerColorPalette9 {
                background-color: #a0c0cf;
            }
        }
    }

}

// PARTE RELLENA //

.containerFillInTop {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    font-family: $primaryFont;
    color: $metalColor;
    font-size: 18px;
    width: 100%;
    border-top: 1px solid #d8d8d8;
    cursor: pointer;
    padding-bottom: 10px;
}
/* ... */

